<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signup.SignUpActivity">


  <ImageButton
      android:id="@+id/back_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/ic_back"
      android:background="@color/white"
      android:padding="25dp"

      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/textView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/text_signup"
      android:textColor="@color/black"
      android:textStyle="bold"

      app:layout_constraintBottom_toTopOf="@+id/et_name"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="1.0"

      android:layout_marginBottom="80dp"
      android:layout_marginTop="40dp"/>

  <EditText
      android:id="@+id/et_name"
      style="@style/EditText"
      android:layout_marginBottom="12dp"
      android:drawableStart="@drawable/ic_person"
      android:hint="@string/name"

      android:inputType="text"
      app:layout_constraintBottom_toTopOf="@+id/et_email"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent" />

  <TextView
      style="@style/Line"
      android:id="@+id/line_name"
      android:background="@color/dark_green"
      app:layout_constraintTop_toBottomOf="@id/et_name"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"/>

  <EditText
      android:id="@+id/et_email"
      style="@style/EditText"
      android:drawableStart="@drawable/ic_email"
      android:hint="@string/email"
      android:inputType="textEmailAddress"

      app:layout_constraintBottom_toTopOf="@+id/et_password"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <TextView
      style="@style/Line"
      android:id="@+id/line_email"
      android:background="@color/dark_green"
      app:layout_constraintTop_toBottomOf="@id/et_email"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"/>

  <EditText
      android:id="@+id/et_password"
      style="@style/EditText"
      android:drawableStart="@drawable/ic_lock"
      android:hint="@string/password"

      android:inputType="textPassword"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintBottom_toBottomOf="@+id/et_email"
       />
  <TextView
      style="@style/Line"
      android:id="@+id/line_password"
      android:background="@color/dark_green"
      app:layout_constraintTop_toBottomOf="@id/et_password"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"/>

  <android.support.v7.widget.AppCompatButton
      android:id="@+id/btn_signin"
      style="@style/DefaultButton"
      android:background="@drawable/btn_bg_green"
      android:textColor="@color/white"
      android:text="@string/signup"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/line_password" />


</android.support.constraint.ConstraintLayout>