<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signin.SignInActivity">


    <EditText
        style="@style/EditText"
        android:id="@+id/et_email"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="15dp"
        android:hint="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/et_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/line_email"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@color/dark_green"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        style="@style/EditText"
        android:id="@+id/et_password"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="15dp"
        android:hint="@string/password"
        app:layout_constraintBottom_toTopOf="@+id/btn_signin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/line_password"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@color/dark_green"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_signin"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:padding="15dp"
        android:background="@drawable/btn_bg_green"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_signin">
    </TextView>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_signup"
        android:text="@string/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:padding="15dp"
        android:background="@drawable/btn_bg_white"
        android:textColor="@color/dark_green"
        app:layout_constraintTop_toBottomOf="@id/line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


</android.support.constraint.ConstraintLayout>